2008-08-18 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b135

 * Security Fix *

 Inadequate Application Error Handling and Suppression
 Issue Overview
 Detailed error messages often result from unhandled or unexpected exceptions
 within application code.

 -- Other fixes --

 * Fix: forget to adust JS in imagemap.php

 * Fix: Make Imagemap textarea compatible with phpNuke.

 * Change: Need to have constant LOAD_SESSIONS set before loading gallery
           session code.

2008-08-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b134

 * Security Fix *

 New Password Functionality Susceptible to Brute Force Attacks
 Issue Overview
 The new password functionality generates a one-time password hash value that
 is comprised of the first 5 characters returned
 by the PHP md5 function and is derived from the user's current password and
 the current system timestamp. This weak
 character composition (valid HEX characters, ie A-F and 0-9) and possibility
 for duplicate password hashes (due to password
 requests at the same time and duplicate current password values) exposes the
 application to remote unauthenticated
 automated brute force attacks.


2008-08-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b133

 * Security Fix *

 Inadequate Password Complexity Enforcement
 Issue Overview
 The application does not enforce adequate password complexity requirements
 for user passwords.
 Allowing weak passwords increases the chances of account compromise
 via password guessing attacks.


 - Minimum length of passwords 4 characters.
 - Password = username not allowed anymore.
 
 Added new nice password strengthmeter.

 
2008-08-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b132

 *** Security Fix ***

 Role-Based Authorization Not Adequately Enforced
 Issue Overview
 The application determines whether certain functionality is available in the
 user-interface (UI) based on role/group-membership
 (admin, custom groups, etc) and assigned permissions (i.e. canChangeOwnPw,
 canWriteToAlbum, etc).
